update the code.

--- a/logging.conf
+++ b/logging.conf
@@ -34,7 +34,7 @@ args=(sys.stdout,)
 
 #============================ loggers =========================================
 [loggers]
-keys=root,moteData,MoteConnector
+keys=root,moteData,MoteConnector,coapthon.client.coap,coapthon.layers.observelayer
 
 [logger_root]
 level=DEBUG
@@ -52,4 +52,14 @@ propagate=0
 handlers=std,console
 qualname=MoteConnector
 
+[logger_coapthon.client.coap]
+level=DEBUG
+propagate=0
+handlers=std,console
+qualname=coapthon.client.coap
 
+[logger_coapthon.layers.observelayer]
+level=DEBUG
+propagate=0
+handlers=std,console
+qualname=coapthon.layers.observelayer
